; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_tmscsim.c_dc390_InvalidCmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_tmscsim.c_dc390_InvalidCmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc390_acb = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@SRB_START_ = common dso_local global i32 0, align 4
@SRB_MSGOUT = common dso_local global i32 0, align 4
@ScsiCmd = common dso_local global i32 0, align 4
@CLEAR_FIFO_CMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dc390_acb*)* @dc390_InvalidCmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dc390_InvalidCmd(%struct.dc390_acb* %0) #0 {
  %2 = alloca %struct.dc390_acb*, align 8
  store %struct.dc390_acb* %0, %struct.dc390_acb** %2, align 8
  %3 = load %struct.dc390_acb*, %struct.dc390_acb** %2, align 8
  %4 = getelementptr inbounds %struct.dc390_acb, %struct.dc390_acb* %3, i32 0, i32 0
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @SRB_START_, align 4
  %11 = load i32, i32* @SRB_MSGOUT, align 4
  %12 = or i32 %10, %11
  %13 = and i32 %9, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @ScsiCmd, align 4
  %17 = load i32, i32* @CLEAR_FIFO_CMD, align 4
  %18 = call i32 @DC390_write8(i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %15, %1
  ret void
}

declare dso_local i32 @DC390_write8(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
